<resources>
    <string name="app_name">Tecnologico App</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">tecnologico_android</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribed">Subcrito a las notificaciones</string>
    <string name="msg_subscribe_failed">Error al subscribirte a las notificaciones</string>

    // Utils
    <string name="divider_bullet">•</string>
    <string name="message_no_reviews">¡Se el primero en dejar un comentario!</string>
    <string name="filter_add_review">Escribir comentario</string>
    <string name="hint_review">¿Que piensas?</string>
    <string name="cancel">Cancelar</string>
    <string name="submit">Enviar</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="add_random_items">Opcion 2</string>

    // Publicacion strings
    <string name="publicacion_item_username">dakedroid</string>
    <string name="publicacion_item_date">29 de Agosto, 2018</string>
    <string name="publicacion_item_body_text">Se les avisa a todos los alumnos que tenemos que presentarnos en la explanada el dia de mañana a primera hora</string>
    <string name="publicacion_item_content_description_username_picture">Imagen Username</string>
    <string name="publicacion_item_content_description_imagen_body">Imagen del cuerpo principal</string>
    <string name="publicacion_item_content_description_imagen_likes">Imagen likes</string>
    <string name="publicacion_item_num_likes">120</string>
    <string name="publicacion_item_content_description_share">Imagen compartir</string>
    <string name="publicacion_item_content_description_num_comments">Imagen comentario</string>
    <string name="publicacion_item_num_comments">20</string>
    <string name="dashboar_user">JORGE LUIS SIXTO ROBERTO</string>
    <string name="dashboar_email">jorge_sixto@outlook.com</string>
    <string name="dashboar_head_imagen_description">Imagendeencabezado</string>


    // login

    <string name="loading">Cargando…</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>

    // Documentos
    <string name="item_documentos_imagen_documento_content_description">Imagen del tipo de documento</string>
    <string name="item_documentos_nombre_documento">Formato de residencias para entrega de reportes bimestrales.docx</string>
    <string name="item_documento_username">Departamento. comunicacion y difusion</string>
    <string name="item_documento_imagen_descarga_content_description">Imagen de descarga</string>


    // storage

    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>


    //Dashboard
    <string name="dashboard_txt_1">Publicaciones</string>
    <string name="dashboard_txt_4">Residencias Profesionales</string>
    <string name="dashboard_txt_7">Editar</string>
    <string name="dashboard_txt_2">Convocatorias</string>
    <string name="dashboard_txt_5">Servicio Social</string>
    <string name="dashboard_txt_3">Avisos</string>
    <string name="dashboard_txt_6">Documentos Descarga</string>
    <string name="dashboard_txt_9">Ajustes</string>
    <string name="dashboard_txt_8">Cerrar Sesion</string>


    //item convocarotia
    <string name="convocatoria_item_username">Usuario de la app</string>
    <string name="convocatoria_item_date">Fecha de publicacion</string>
    <string name="convocatoria_item_description">Esta e la convocatoria con base a la beca de manutencion, correpondiente al año 2019, los domentos se estaran recibiendo ne escolares.</string>

    <string name="convocatoria_item_content_description_imagen_likes">Imagen likes</string>
    <string name="convocatoria_item_btn_descargar">Descargar</string>
    <string name="convocatoria_item_date_l">Fecha limite</string>
    <string name="aviso_item_description">Aviso importante: Mañana oficialmente no habra clases hasta proximo aviso</string>


    <string name="residencias">Residencias</string>
    <string name="servicio_social">Servicio Social</string>
    <string name="becas">Becas</string>
    <string name="administrativo">Administrativo</string>


    <string name="facebook_app_id">2044861825545194</string>
    <string name="fb_login_protocol_scheme">fb2044861825545194</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello </string>
    <string name="successfully_posted_post">Post ID</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for </string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: </string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>

</resources>

