<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:orientation="vertical"
    android:padding="8dp">
    <!-- Header Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/convocatoria_item_user_photo"
                android:layout_width="@dimen/item_user_photo_w"
                android:layout_height="@dimen/item_user_photo_h"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:contentDescription="@string/publicacion_item_content_description_username_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/facebook_avatar">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/md_keylines"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.divaga.tecnologico.customfonts.MyTextView
                    android:id="@+id/convocatoria_item_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="@dimen/keylines"
                    android:text="@string/convocatoria_item_username"
                    android:textSize="@dimen/publicacion_item_username_size"
                    android:textStyle="bold">

                </com.divaga.tecnologico.customfonts.MyTextView>

                <com.divaga.tecnologico.customfonts.MyTextView
                    android:id="@+id/convocatoria_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/keylines"
                    android:text="@string/convocatoria_item_date"
                    android:textSize="@dimen/publicacion_item_date">

                </com.divaga.tecnologico.customfonts.MyTextView>

            </LinearLayout>

        </LinearLayout>

        <com.divaga.tecnologico.customfonts.MyTextView
            android:id="@+id/convocatoria_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keylines"
            android:layout_marginStart="@dimen/keylines"
            android:layout_marginTop="@dimen/keylines"
            android:text="@string/convocatoria_item_description"
            android:textSize="@dimen/publicacion_item_body_size">

        </com.divaga.tecnologico.customfonts.MyTextView>

        <ImageView
            android:id="@+id/convocatoria_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keylines"
            android:minHeight="60dp"
            android:contentDescription="@string/publicacion_item_content_description_imagen_body"
            android:maxHeight="380dp"
            android:scaleType="centerInside"
            android:src="@drawable/pdf">

        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keylines"
            android:layout_marginStart="@dimen/keylines"
            android:layout_marginEnd="@dimen/md_keylines">


            <ImageView
                android:id="@+id/publicacion_item_img_likes"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="@dimen/keylines"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/keylines"
                android:layout_marginBottom="@dimen/keylines"
                android:src="@drawable/calendar"
                android:contentDescription="@string/publicacion_item_content_description_imagen_likes">

            </ImageView>

            <com.divaga.tecnologico.customfonts.MyTextView
                android:id="@+id/convocatoria_item_date_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/keylines"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_toEndOf="@id/publicacion_item_img_likes"
                android:text="@string/convocatoria_item_date_l"
                android:textSize="14sp">
            </com.divaga.tecnologico.customfonts.MyTextView>


            <com.divaga.tecnologico.customfonts.MyTextView
                android:id="@+id/convocatoria_item_btn_download"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:background="@drawable/rect1"
                android:gravity="center"
                android:text="@string/convocatoria_item_btn_descargar"
                android:textColor="#fff"
                android:textSize="18sp"
                android:tint="#4CAF50">

            </com.divaga.tecnologico.customfonts.MyTextView>



        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
