<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="8dp">
    <!-- Header Layout-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/item_publicacion_share_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/publicacion_item_user_photo"
                    android:layout_width="@dimen/item_user_photo_w"
                    android:layout_height="@dimen/item_user_photo_h"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="@dimen/keylines"
                    android:layout_marginTop="@dimen/keylines"
                    android:contentDescription="@string/publicacion_item_content_description_username_picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pizza_monster">

                </de.hdodenhof.circleimageview.CircleImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/md_keylines"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/publicacion_item_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:layout_marginStart="@dimen/keylines"
                        android:text="@string/publicacion_item_username"
                        android:textSize="@dimen/publicacion_item_username_size"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/publicacion_item_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/keylines"
                        android:text="@string/publicacion_item_date"
                        android:textSize="@dimen/publicacion_item_date">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/publicacion_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/keylines"
                android:layout_marginStart="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:text="@string/publicacion_item_body_text"
                android:textSize="@dimen/publicacion_item_body_size">

            </TextView>

            <ImageView
                android:id="@+id/publicacion_item_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keylines"
                android:contentDescription="@string/publicacion_item_content_description_imagen_body"
                android:maxHeight="380dp"
                android:minHeight="200dp"
                android:src="@drawable/pizza_monster">

            </ImageView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/md_keylines"
            android:layout_marginStart="@dimen/keylines"
            android:layout_marginTop="@dimen/keylines">


            <Button
                android:id="@+id/postPhotoButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:background="@drawable/baseline_share_black_36"
                android:backgroundTint="#4CAF50"
                android:contentDescription="@string/publicacion_item_content_description_share"
                tools:targetApi="lollipop">

            </Button>

            <TextView
                android:id="@+id/publicacion_item_num_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:text="Comentar"
                android:textSize="20sp">

            </TextView>

            <ImageView
                android:id="@+id/publicacion_item_img_comments"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginBottom="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:layout_toEndOf="@id/publicacion_item_num_comments"
                android:contentDescription="@string/publicacion_item_content_description_num_comments"
                android:src="@drawable/baseline_textsms_black_18"
                android:tint="#2196F3">

            </ImageView>

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
