<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="8dp">
    <!-- Header Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fui_bgEmail"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avisos_item_user_photo"
                android:layout_width="@dimen/item_user_photo_w"
                android:layout_height="@dimen/item_user_photo_h"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:contentDescription="@string/publicacion_item_content_description_username_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/facebook_avatar">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/md_keylines"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.divaga.tecnologico.customfonts.MyTextView
                    android:id="@+id/avisos_item_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginStart="@dimen/keylines"
                    android:text="@string/convocatoria_item_username"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/publicacion_item_username_size"
                    android:textStyle="bold">

                </com.divaga.tecnologico.customfonts.MyTextView>

                <com.divaga.tecnologico.customfonts.MyTextView
                    android:id="@+id/avisos_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/keylines"
                    android:text="@string/convocatoria_item_date"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/publicacion_item_date">

                </com.divaga.tecnologico.customfonts.MyTextView>

            </LinearLayout>

        </LinearLayout>

        <com.divaga.tecnologico.customfonts.MyTextView
            android:id="@+id/avisos_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keylines"
            android:layout_marginStart="@dimen/keylines"
            android:layout_marginTop="@dimen/keylines"
            android:autoLink="none"
            android:text="@string/aviso_item_description"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/aviso_item_body_size">

        </com.divaga.tecnologico.customfonts.MyTextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/md_keylines"
            android:layout_marginStart="@dimen/keylines"
            android:layout_marginTop="@dimen/keylines">


            <ImageView
                android:id="@+id/avisos_item_img_download"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/keylines"
                android:layout_marginTop="@dimen/keylines"
                android:contentDescription="@string/publicacion_item_content_description_share"
                android:src="@drawable/baseline_share_black_36"
                android:tint="#4CAF50">

            </ImageView>




        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
