<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/publicacion_item_keylines"
    android:layout_height="146dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/item_documentos_category"
           app:cardBackgroundColor="@color/colorDocument7"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/item_documentos_txt_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Residencias"
                android:textColor="@color/colorWhite"
                android:textStyle="bold">

            </TextView>


        </android.support.v7.widget.CardView>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/item_documentos_imagen_documento"
                android:layout_marginTop="@dimen/publicacion_item_keylines"
                android:layout_marginBottom="@dimen/publicacion_item_keylines"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:padding="@dimen/publicacion_item_md_keylines"
                android:src="@drawable/pdf"
                android:layout_marginStart="@dimen/publicacion_item_keylines"
                android:contentDescription="@string/item_documentos_imagen_documento_content_description">

            </ImageView>

            <LinearLayout
                android:id="@+id/item_documentos_description_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/publicacion_item_keylines"
                android:layout_marginBottom="@dimen/publicacion_item_keylines"
                android:layout_toStartOf="@id/item_documentos_boton_descarga"
                android:layout_toEndOf="@id/item_documentos_imagen_documento"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/publicacion_item_keylines">

                <TextView
                    android:id="@+id/item_documentos_nombre_documento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/publicacion_item_keylines"
                    android:textStyle="bold"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/item_documentos_nombre_documento">

                </TextView>

                <TextView
                    android:id="@+id/item_documentos_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_documento_username"
                    android:textSize="12sp">
                </TextView>

            </LinearLayout>

            <ImageView

                android:id="@+id/item_documentos_boton_descarga"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/publicacion_item_md_keylines"
                android:layout_marginEnd="@dimen/publicacion_item_md_keylines"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:tint="#2196F3"
                android:src="@drawable/baseline_get_app_black_48"
                android:contentDescription="@string/item_documento_imagen_descarga_content_description">

            </ImageView>

        </RelativeLayout>


    </LinearLayout>




</android.support.v7.widget.CardView>

